# SEAME-WarmUp-24-25-Team07

./: .gitignore  README.md  commit-rules.md  m00ex00.md
.github/workflows/: tester.yml  tester2.yml
Module02/ex00/: Car.cpp  shared_ptr.cpp  unique_ptr.cpp
Module02/ex01/: Part.cpp
Modules/Module00/ex02/: CMakeLists.txt  README.md
Modules/Module00/ex02/include/: StringConverter.hpp  StringConverterTest.hpp
Modules/Module00/ex02/src/: StringConverter.cpp
Modules/Module00/ex02/test/: CMakeLists.txt  StringConverterTest.cpp  main_test.cpp
Modules/Module00/ex03/: CMakeLists.txt  Readme.md  module-00-ex03.pro
Modules/Module00/ex03/include/: Contact.hpp  PhoneBook.hpp
Modules/Module00/ex03/sources/: PhoneBook.cpp
Modules/Module00/ex03/tests/: CMakeLists.txt  test_phonebook.cpp
Modules/Module00/module-00-ex02/: convert  convert.cpp  convert.hpp  convert_program_test  convert_program_test.cpp
Modules/Module00/module-00-ex02-update/include/: StringConverter.hpp
Modules/Module00/module-00-ex02-update/src/: StringConverter.cpp  main.cpp
Modules/Module00/module-00-ex03/: CMakeLists.txt
Modules/Module00/module-00-ex03/include/: Contact.hpp  PhoneBook.hpp
Modules/Module00/module-00-ex03/sources/: Contact.cpp  PhoneBook.cpp  main.cpp
Modules/Module00/module-00-ex03/tests/: test_phonebook.cpp
Modules/Module01/ex00/: CMakeLists.txt  Car.cpp  car.hpp  main.cpp
Modules/Module01/ex01/: CMakeLists.txt  Car.cpp  SportCar.cpp  SportCar.hpp  car.hpp  main.cpp
Modules/Module01/ex02/abstraction/: ACar.hpp  CMakeLists.txt  SedanCar.cpp  SedanCar.hpp  SportCar.cpp  SportCar.hpp  main.cpp
Modules/Module01/ex02/encapsulation/: CMakeLists.txt  Car.cpp  Car.hpp  SportCar.cpp  SportCar.hpp  car.cpp  main.cpp
Modules/Module01/ex02/inheritance-polymorphism/: ACar.hpp  CMakeLists.txt  SedanCar.cpp  SportCar.cpp  main.cpp
Modules/Module01/ex02/modularity/: ACar.cpp  ACar.hpp  CMakeLists.txt  SedanCar.cpp  SedanCar.hpp  SportCar.cpp  SportCar.hpp  car_functions.cpp  car_functions.hpp  main.cpp
Modules/Module02/ex00/: shared_ptr.cpp  unique_ptr.cpp
Modules/Module02/ex00/includes/: ACar.hpp  SomeCar.hpp
Modules/Module02/ex00/sources/: ACar.cpp  SomeCar.cpp  shared_ptr.cpp  unique_ptr.cpp
Modules/Module02/ex01/: CMakeLists.txt  Car.cpp  Part.cpp  Tests.md  m00ex01.md  main.cpp  parts
Modules/Module02/ex01/includes/: All.hpp  Part.hpp  SomeCar.hpp  partAll.hpp  partBody.hpp  partBrake.hpp  partChassis.hpp  partEngine.hpp  partMediaSystem.hpp  partTransmission.hpp  partTrunk.hpp  partWheel.hpp  partWindowShield.hpp
Modules/Module02/ex01/sources/: ACar.cpp  SomeCar.cpp  main.cpp  partBody.cpp  partBrake.cpp  partDoor.cpp  partEngine.cpp  partTire.cpp  partTransmission.cpp  partTrunk.cpp  partWheel.cpp  partWindowShield.cpp
Modules/Module03/: CMakeLists.txt  contact.cpp  contact.h  contactlist.cpp  contactlist.h  phonebook.h  phonebook.ui
Modules/module03/PhoneBook_QT/: phonebook.cpp
tests/: test_main.cpp
